--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,27 +1,27 @@
 name: 'dart_service_worker'
-version: 0.0.1
+version: 0.0.2
 description: >
-  A mobile-friendly web app with routing, responsive CSS, and (optional) Sass
-  support.
-#author: Your Name <email@example.com>
-#homepage: https://www.example.com
+  A simple helper package for Service Worker. Includes an example web app.
+author: Filip Hracek <filip.hracek@gmail.com>
+homepage: https://filip-app.appspot.com
 
 environment:
-  sdk: '>=1.0.0 <2.0.0'
+  sdk: ">=1.8.0 <2.0.0"
 
 dependencies:
   browser: '>=0.10.0 <0.11.0'
+  uuid: "^0.5.0"
+  http: "^0.11.3+2"
+  barback: "^0.15.2"
+  path: "^1.3.6"
+  quiver: "^0.21.4"
+
+dev_dependencies:
+  console: "^2.2.3"
   firebase: "^0.6.3"
   sass: '>=0.4.0 <0.5.0'
   script_inliner: "^1.0.0"
   dart_to_js_script_rewriter: '^0.1.0'
-
-dev_dependencies:
-  console: "^2.2.3"
-  http: any
-  barback: "^0.15.2"
-  uuid: "0.5.0"
-  path: any
 
 transformers:
 #- dart_to_js_script_rewriter
